feat: move server-side api calls to server,
